Part-baked balls/mushroom/vegetable/stuffed pepper handbook crashing fixed - DONE!!!
Handbook no longer says you can put syrups & toppings on regular bread - DONE!!!
Trail mix handbook entry moved to Cooking 102 - DONE!!!
Cooking 101 & 102 alphabetized  - DONE!!!
Salted peanut candy requires correct amount of peanut paste - DONE!!!
Boiled and pickled eggs re-added (not sure what happened there)

1.6.5
Dehydrated fruits cure into the same amount of dried fruits (for real this time)
Handbook mentions that 1 L of broth is needed for meals
Handbook mentions acorn coffee recipe in Cooking 104
Non-vanilla fruit works in barrels
Vinegar barrel recipe re-added, you can turn berries into vinegar
Soft dough + 1 chopped pumpkin makes muffins, not dumplings
Fixed crashing the game in handbook for part baked tree-growing mushrooms (thanks to DoctorVanGogh)
Add simmering recipes for primitive survival meat types (thanks to DoctorVanGogh)
Primitive Survival crab meat can be used to make fish broth (thanks to DoctorVanGogh)
Cooked crab meat from Primtive Survival can be added to salads (thanks to DoctorVanGogh)
Honey pressing slightly tweaked (thanks to DoctorVanGogh)
Handbook crashing fixed! (thanks to DoctorVanGogh)
Snake meat included in salads
Fish broth renamed to Seafood broth
Seafood broth can be used in porridge as a topping
Cottage cheese in meals fixed (review Cooking 103 for updates)
Bread crumbs now usable as feed for poultry
Oil lamp recipe tweaked (thanks to Tels and SpearAndFang)

1.6.4
Added Compote
Added Acorn "Coffee" & Roasted Acorns
Added Candied Fruit
Added herbal bread crumbs
Japanese translation updated (thanks to macoto_hino)
Vanilla & wildcraft wine/cider/spirits now have sat in meals
Handbook mentions you can get resin from acacia trees
Added item description to resin
You can no longer crack boiled/pickled eggs
Pickled or boiled eggs can be added to scrambled eggs
Charred syrup-covered fruit bread recipe fixed