@@ -15,7 +15,7 @@
 			"*-elfinsaddle": -3.5,
 			"*-jackolantern": -3,
 			"*-devilbolete": -5,
-			"*-pinkbonnet":	-5,
+			"*-pinkbonnet":	-10,
 			"*-flyagaric": -3.25,
 			"*-bitterbolete": -1.5,
 			"*-devilstooth": -1,
@@ -65,6 +65,8 @@
 		"*-bitterbolete": { saturation: 80, health: -3, foodcategory: "Vegetable" },
 		"*-devilstooth": { saturation: 80, health: -2, foodcategory: "Vegetable" },
 		"*-golddropmilkcap": { saturation: 80, health: -2.5, foodcategory: "Vegetable" },
+		"*-funeralbell-*": { saturation: 80, health: -40, foodcategory: "Vegetable" },
+		"*-pinkbonnet-*": { saturation: 80, health: -10, foodcategory: "Vegetable" },
 		"*": { saturation: 80, foodcategory: "Vegetable" },
 	},
 	combustiblePropsByType: {
