@@ -134,6 +134,8 @@
 		"*-bitterbolete-partbaked": { saturation: 90, health: -2.25, foodcategory: "Vegetable" },
 		"*-devilstooth-partbaked": { saturation: 90, health: -1.5, foodcategory: "Vegetable" },
 		"*-golddropmilkcap-partbaked": { saturation: 90, health: -1.875, foodcategory: "Vegetable" },
+		"*-funeralbell-partbaked": { saturation: 90, health: -30, foodcategory: "Vegetable" },
+		"*-pinkbonnet-partbaked": { saturation: 90, health: -7.5, foodcategory: "Vegetable" },
 		"*-partbaked": { satiety: 90, foodcategory: "Vegetable" },
 		
 		"*-earthball-perfect": { saturation: 110, health: -4, foodcategory: "Vegetable" },
@@ -145,6 +147,8 @@
 		"*-bitterbolete-perfect": { saturation: 110, health: -1.5, foodcategory: "Vegetable" },
 		"*-devilstooth-perfect": { saturation: 110, health: -1, foodcategory: "Vegetable" },
 		"*-golddropmilkcap-perfect": { saturation: 110, health: -1.25, foodcategory: "Vegetable" },
+		"*-funeralbell-perfect": { saturation: 110, health: -20, foodcategory: "Vegetable" },
+		"*-pinkbonnet-perfect": { saturation: 110, health: -5, foodcategory: "Vegetable" },
 		"*-perfect": { satiety: 110, foodcategory: "Vegetable" },
 
 		"*-earthball-charred": { saturation: 100, health: -2, foodcategory: "Vegetable" },
@@ -156,6 +160,8 @@
 		"*-bitterbolete-charred": { saturation: 100, health: -0.75, foodcategory: "Vegetable" },
 		"*-devilstooth-charred": { saturation: 100, health: -0.5, foodcategory: "Vegetable" },
 		"*-golddropmilkcap-charred": { saturation: 100, health: -0.625, foodcategory: "Vegetable" },
+		"*-funeralbell-perfect": { saturation: 100, health: -10, foodcategory: "Vegetable" },
+		"*-pinkbonnet-perfect": { saturation: 100, health: -2.5, foodcategory: "Vegetable" },
 		"*-charred": { satiety: 100, foodcategory: "Vegetable" },
 	},
 	transitionablePropsByType: {
