@@ -49,7 +49,8 @@ Handbook no longer says you can put syrups & toppings on regular bread - DONE!!!
 Trail mix handbook entry moved to Cooking 102 - DONE!!!
 Cooking 101 & 102 alphabetized  - DONE!!!
 Salted peanut candy requires correct amount of peanut paste - DONE!!!
-Boiled and pickled eggs re-added (not sure what happened there)
+Boiled and pickled eggs re-added (not sure what happened there) - DONE!!!
+Funeral bell & pink bonnet mushrooms given proper health values (watch out) - DONE!!!
 
 1.6.5
 Dehydrated fruits cure into the same amount of dried fruits (for real this time)
